human_written_tests/WebAssembly/processed_control_flow_validation/test_if_94.wast
(assert_invalid
  (module
    (memory 0)
    (func $type-condition-empty-in-load
      (i32.load (if(then))) (drop)
    )
  )
  "type mismatch"
)